# srs-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  railway.toml
srs_mcp/: __init__.py  seed.py
