[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "srs-mcp"
version = "0.1.0"
description = "Agent-agnostic MCP server for spaced-repetition learning (FSRS). Add cards, review what's due, grade recall — no Anki GUI required."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Peter Danenberg", email = "github@pcd.la" }]
keywords = ["mcp", "model-context-protocol", "spaced-repetition", "fsrs", "flashcards", "anki"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
]
dependencies = [
    "fastmcp>=3.0.2",
    "fsrs>=4.0.0",
    "psycopg[binary]>=3.3.4",
]

[project.urls]
Homepage = "https://github.com/klutometis/srs-mcp"
Repository = "https://github.com/klutometis/srs-mcp.git"
Issues = "https://github.com/klutometis/srs-mcp/issues"

[project.scripts]
srs-mcp = "srs_mcp:main"
srs-seed = "srs_mcp.seed:main"

[tool.hatch.build.targets.wheel]
packages = ["srs_mcp"]
